# ffmpeg-comparison-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  deploy_dlls.ps1
resources/: app.rc  application.qrc
src/: AbAv1Job.cpp  AbAv1Job.h  FfmpegJob.cpp  FfmpegJob.h  HistoryTab.cpp  HistoryTab.h  MainWindow.cpp  MainWindow.h  PredictTab.cpp  PredictTab.h  VerifyTab.cpp  VerifyTab.h  VideoUtils.cpp  VideoUtils.h  main.cpp
